test/files/neg/bug585.check
bug585.scala:1: error: unclosed comment
/*
^
one error found
